--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
+  "overrides": {
+    "hono": "^4.11.9",
+    "lodash": "^4.17.23"
+  },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
